z-index fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,6 +32,7 @@ body {
     width: 100%;
     height: 30vh;
     background-color: $color-home-bg;
+    z-index: 1;
   }
 
   .home-title {
